# custom_viewer

./: .gitignore  CMakeLists.txt  README.md
python_version/: main.py
src/: main.cpp  main__utils_testing.cpp  main_default.cpp  main_testing.cpp  main_testing2.cpp
src/Headers/: Application.h  ArchiveWorker.h  DiskInfo.h  DiskInfo.hpp  FileManipulations.h  FileManipulations.hpp  JsonWorker.h  Serializable.h  TextWorker.h  XmlWorker.h
src/Sources/: Application.cpp  ArchiveWorker.cpp  DiskInfo.cpp  FileManipulations.cpp  JsonWorker.cpp  Serializable.cpp  TextWorker.cpp  XmlWorker..cpp
